# NianNian

./: .gitignore  CMakeLists.txt  Readme.md  prog
Config/: Window.ini
resources/: Test Map 1.tmx
src/: Bitmask.cpp  Bitmask.h  Bitmask.hpp  Game.cpp  Game.h  Game.hpp  Input.cpp  Input.h  Main.cpp  Scene.h  SceneGame.cpp  SceneGame.h  SceneSplashScreen.cpp  SceneSplashScreen.h  SceneStateMachine.cpp  SceneStateMachine.h  Window.cpp  Window.h  Window.hpp  WorkingDirectory.cpp  WorkingDirectory.h  WorkingDirectory.hpp  main.cpp
src/game/: AllScenes.hpp  Animation.cpp  Animation.hpp  Bitmask.cpp  Bitmask.hpp  Button.cpp  Button.hpp  C_Animation.cpp  C_Animation.hpp  C_BasicAttackAnimation.cpp  C_BasicAttackAnimation.hpp  C_CameraView.cpp  C_CameraView.hpp  C_DashMovement.cpp  C_DashMovement.hpp  C_Direction.cpp  C_Direction.hpp  C_Hitbox.cpp  C_Hitbox.hpp  C_Movement.cpp  C_Movement.hpp  C_MovementAnimation.cpp  C_MovementAnimation.hpp  C_Position.cpp  C_Position.hpp  C_Sprite.cpp  C_Sprite.hpp  C_Velocity.cpp  C_Velocity.hpp  Component.hpp  CooldownTimer.cpp  CooldownTimer.hpp  EnumClassHash.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Object.cpp  Object.hpp  ObjectCollection.cpp  (+28 more)
src/game/Entity/: Entity.cpp  Entity.hpp
